<resources>
    <string name="app_name">PingApplication</string>
    <string name="ping_button_label">PING</string>
    <string name="address_label">Название хоста или IP адрес</string>
    <string name="settings_button_label">Настройки</string>
    <string name="manually_change">Изменить вручную</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_packs_label">Количество пакетов</string>
    <string name="infinite_number_of_packs">не определено</string>
    <string name="stop_ping_button">STOP</string>
    <string name="host_name_error">Неверное имя хоста</string>
    <string name="host_name_label_text">Имя</string>
    <string name="host_name_label_ip">IP</string>
    <string name="update_rate_label">Обновлять каждые</string>
    <string name="save_button_label">Сохранить</string>
    <string name="preferences_name">shared_preferences_name</string>
    <string name="sp_name">shared_name</string>
    <string name="sp_short_name">shared_short_name</string>
    <string name="sp_rate">shared_rate</string>
    <string name="short_address_label">Краткий заголовок (необязательно)</string>


    <string-array name="update_rate_dims">
        <item>Час</item>
        <item>Минуты</item>
        <item>Секунды</item>
    </string-array>
    <string name="title_ping_widget">Виджет констроля доступа хоста</string>
    <string name="toolbar_add_widget_item_title">Установить функцию виджетов</string>
    <string name="no_internet_error">Нет доступа к интернету</string>
    <string name="has_active_sessions_error">Попробуйте позднее, в настоящий момент уже ведется установка дополнительного модуля</string>
    <string name="module_installation_started_success">Запущена установка дополнительного модуля</string>
    <string name="no_module_found_error">Модуль не найден. Возможно вы не имеете к нему доступа.</string>
    <string name="ping_command_for_ipv4">/system/bin/ping</string>
    <string name="ping_command_for_ipv6">/system/bin/ping6</string>
    <string name="text_for_deleted_item_adapter">удалено</string>
    <string name="autostart_warning">ВНИМАНИЕ: Для регулярного обновления виджета необходимо включить автозапуск приложения.</string>
    <string name="autostart_button">Включить автозапуск</string>
    <string name="appName">Ping me</string>
</resources>
