<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wconfig_short_hostname_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_address_label">

        <com.simpleapps.pingme.TextInputAutoCompleteTextView
            android:id="@+id/wconfig_short_hostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wconfig_hostname_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label">

        <com.simpleapps.pingme.TextInputAutoCompleteTextView
            android:id="@+id/wconfig_hostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wconfig_update_rate_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/update_rate_label">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/wconfig_update_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/wconfig_update_rate_dimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/wconfig_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/text_margin"
        android:text="@string/save_button_label" />

    <TextView
        android:id="@+id/autostart_warning"
        android:textColor="@color/colorLightGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/autostart_warning" />

    <Button
        android:id="@+id/autostart_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/colorLightGrey"
        android:text="@string/autostart_button" />
</LinearLayout>